--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
   "version": "1.0.0",
   "description": "Creacion de una red social.",
   "main": "scr/index.html",
+
   "scripts": {
   "test": "jest --coverage",
-  "eslint": "eslint ext . js src/ test/",
+  "eslint": "eslint --ext .js src/ test/",
   "htmlhint":"htmlhint src/*.html",
+  "pretest": "npm run eslint && npm run htmlhint",
   "deploy": "gh-pages -d src/"
   },
-  "jest": {
-    "verbose": true,
-    "collectCoverage": true
-  },
+
+
+
+
   "author": "Squad 5 Red-Social",
   "license": "ISC",
   "eslint": "^5.12.1",
